Upgrade notes include downstream

--- a/documentation/asciidoc/stories/assembly_installing_operator.adoc
+++ b/documentation/asciidoc/stories/assembly_installing_operator.adoc
@@ -8,6 +8,7 @@ Install {ispn_operator} into a {k8s} namespace to create and manage {brandname}
 clusters.
 
 include::{topics}/proc_install_olm.adoc[leveloffset=+1]
+//Downstream only
 ifdef::downstream[]
 include::{topics}/proc_install_command_line.adoc[leveloffset=+1]
 endif::downstream[]
@@ -15,8 +16,8 @@ endif::downstream[]
 ifdef::community[]
 include::{topics}/proc_install_operatorhub.adoc[leveloffset=+1]
 include::{topics}/proc_install_manually.adoc[leveloffset=+1]
-include::{topics}/ref_upgrades.adoc[leveloffset=+1]
 endif::community[]
+include::{topics}/ref_upgrades.adoc[leveloffset=+1]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
