--- a/documentation/asciidoc/topics/proc_enabling_client_cert_authn.adoc
+++ b/documentation/asciidoc/topics/proc_enabling_client_cert_authn.adoc
@@ -2,13 +2,7 @@
 = Enabling client certificate authentication
 
 [role="_abstract"]
-{brandname} clusters do not use client certificate authentication by default.
-Complete the following procedure to enable it.
-
-You can configure {brandname} to verify client identities from certificates in a trust store in two ways:
-
-`Validate`:: Requires a trust store that contains only the signing certificate, which is typically a Certificate Authority (CA). Any client that presents a certificate signed by the CA can connect to {brandname}.
-`Authenticate`:: Requires a trust store that contains all client certificates in addition to the signing certificate. Only clients that present a signed certificate that is present in the trust store can connect to {brandname}.
+To enable client certificate authentication, you configure {brandname} to use trust stores with either the `Validate` or `Authenticate` strategy.
 
 .Procedure
 
