--- a/documentation/asciidoc/stories/assembly_connecting_clients.adoc
+++ b/documentation/asciidoc/stories/assembly_connecting_clients.adoc
@@ -19,6 +19,7 @@ include::{topics}/proc_connecting_console.adoc[leveloffset=+1]
 include::{topics}/con_hotrod_clients.adoc[leveloffset=+1]
 include::{topics}/ref_hotrod_configuration_builder.adoc[leveloffset=+2]
 include::{topics}/ref_hotrod_properties.adoc[leveloffset=+2]
+include::{topics}/ref_hotrod_cert_authn.adoc[leveloffset=+2]
 include::{topics}/proc_creating_caches_hotrod.adoc[leveloffset=+2]
 
 //REST
